hphp/hack/test/typecheck/reactive/owned_mutable2.php
<?hh // partial
class A {
  // ERROR
  <<__OwnedMutable>>
  public function f(): void {
  }
}
